--- a/cart-management-system/src/index.css
+++ b/cart-management-system/src/index.css
@@ -1,4 +1,7 @@
 .card-container{
     display: flex;
     gap: 5px;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
 }
